@@ -1,4 +1,4 @@
-#	$Id: todo.txt,v 1.22 2007-05-22 22:17:59 remko Exp $
+#	$Id: todo.txt,v 1.23 2007-05-30 01:22:08 pwessel Exp $
 
 List of unresolved bugs and desireable enhancements not yet implemented.
 If you fix or implement any of these please take them off the list and
@@ -14,6 +14,8 @@ pshistogram.c:	Bug using -W with time data
 
 psxy[z]:	-Sb -So etc with time data; what is size; how to specify months etc.
 		If cpt uses date-clock z-values then automatically set -f2T or -f3T.
+
+GMT_time_array:	Should be able to handle phase shift passed from -B
 
 ------------------------------------------------------------------------
 ENHANCEMENTS:
